added: game over notice and transparent background

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         <div class="col-6 text-right">0 / 2</div>
       </div>
     </div>
+    <div id="notice" class="animate__animated"></div>
     <div id="rightDiv">
       <div class="my-1">
         <div class="row animate__animated my-1" id="score">
