added driver name and timer

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     src="rightScorecard.js?time=123456789"
     type="text/javascript"
   ></script>
+  <script src="utils.js?time=123456789" type="text/javascript"></script>
   <script src="index.js?time=123456789" type="text/javascript"></script>
   <script src="car.js?time=123456789" type="text/javascript"></script>
   <script src="passenger.js?time=12345678" type="text/javascript"></script>
@@ -39,6 +40,14 @@
     </div>
     <div id="notice" class="animate__animated"></div>
     <div id="rightDiv">
+      <div class="row animate__animated my-1" id="score">
+        <div class="col-6">Driver Name:</div>
+        <div class="col-6 text-right">Anonymous</div>
+      </div>
+      <div class="row animate__animated my-1" id="score">
+        <div class="col-6">Time Remaining:</div>
+        <div class="col-6 text-right">05:00</div>
+      </div>
       <div class="my-1">
         <div class="row animate__animated my-1" id="score">
           <div class="col-6">Score:</div>
