fixed: background images take time to load

--- a/index.html
+++ b/index.html
@@ -31,6 +31,17 @@
   <script src="passenger.js?time=12345678" type="text/javascript"></script>
   <script src="wall.js?time=123456789" type="text/javascript"></script>
   <script src="platform.js?time=123456789" type="text/javascript"></script>
+  <!-- Preload all background images -->
+  <link rel="preload" as="image" href="images/places/Blank.jpg" />
+  <link rel="preload" as="image" href="images/places/Bangalore.jpg" />
+  <link rel="preload" as="image" href="images/places/Hyderabad.jpg" />
+  <link rel="preload" as="image" href="images/places/Chennai.jpg" />
+  <link rel="preload" as="image" href="images/places/Mumbai.jpg" />
+  <link rel="preload" as="image" href="images/places/Pune.jpg" />
+  <link rel="preload" as="image" href="images/places/Kolkata.jpg" />
+  <link rel="preload" as="image" href="images/places/Jaipur.jpg" />
+  <link rel="preload" as="image" href="images/places/Delhi.jpg" />
+  <link rel="preload" as="image" href="images/places/Gangtok.jpg" />
   <body>
     <div class="bg"></div>
     <div class="z-999" id="leftDiv">
