--- a/index.html
+++ b/index.html
@@ -6,13 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <script src="lib/p5/p5.js" type="text/javascript"></script>
+    <script src="lib/p5/p5.sound.min.js" type="text/javascript"></script>
     <script src="lib/matter/matter.js" type="text/javascript"></script>
     <script src="lib/pathseg/pathseg.js" type="text/javascript"></script>
     <script src="lib/decomp/decomp.js" type="text/javascript"></script>
-    <script
-      src="lib/jQuery/jquery-3.6.0.min.js"
-      type="text/javascript"
-    ></script>
+    <script src="lib/jQuery/jquery-3.6.0.min.js" type="text/javascript"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link rel="stylesheet" href="lib/animate/animate.min.css" />
     <link rel="stylesheet" href="lib/bootstrap/bootstrap.min.css" />
