--- a/game.html
+++ b/game.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Akatsuki</title>
     <script src="lib/p5/p5.js" type="text/javascript"></script>
+    <script src="lib/p5/p5.sound.min.js" type="text/javascript"></script>
     <script src="lib/matter/matter.js" type="text/javascript"></script>
     <script src="lib/pathseg/pathseg.js" type="text/javascript"></script>
     <script src="lib/decomp/decomp.js" type="text/javascript"></script>
