--- a/index.html
+++ b/index.html
@@ -12,6 +12,17 @@
     <link rel="stylesheet" href="lib/animate/animate.min.css" />
     <link rel="stylesheet" href="lib/bootstrap/bootstrap.min.css" />
     <link rel="stylesheet" href="styles.css" />
+    <!-- Preload all background images -->
+    <link rel="preload" as="image" href="assets/images/places/Blank.jpg" />
+    <link rel="preload" as="image" href="assets/images/places/Bangalore.jpg" />
+    <link rel="preload" as="image" href="assets/images/places/Hyderabad.jpg" />
+    <link rel="preload" as="image" href="assets/images/places/Chennai.jpg" />
+    <link rel="preload" as="image" href="assets/images/places/Mumbai.jpg" />
+    <link rel="preload" as="image" href="assets/images/places/Pune.jpg" />
+    <link rel="preload" as="image" href="assets/images/places/Kolkata.jpg" />
+    <link rel="preload" as="image" href="assets/images/places/Jaipur.jpg" />
+    <link rel="preload" as="image" href="assets/images/places/Delhi.jpg" />
+    <link rel="preload" as="image" href="assets/images/places/Gangtok.jpg" />
   </head>
   <body>
     <video autoplay muted id="introVideo" onended="onIntroEnd()">
